# esopublic

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/sld_demo_p4_slint/: config.json  config_compressed.json  update.ps1
examples/sld_demo_p4_slint/main/: idf_component.yml
examples/sld_demo_p4_slint/main/app/: app_camera.c  app_camera.h  app_main.c  app_sc2336_custom_settings.h  app_ui_slint.cpp
examples/sld_demo_p4_slint/main/board/: board_p4.c  board_test.h
examples/sld_demo_p4_slint/main/ui/: common.slint  logic.slint  page_image.slint  page_info.slint  page_main.slint
examples/sld_demo_s3_bt817/: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  config_compressed.json  partitions.csv  sdkconfig.defaults.esp32s3
examples/sld_demo_s3_bt817/docs/: ide-setup-en.md
examples/sld_demo_s3_bt817/main/: Kconfig.projbuild  idf_component.yml
examples/sld_demo_s3_bt817/main/app/: app_main.c  app_ui_eve.c
examples/sld_demo_s3_bt817/main/board/: board_s3_bt817.c  board_test_bt817.c
examples/sld_demo_s3_bt817/main/resources/: button_landscape.raw  esope.raw  landscape.raw  qr_sld_demo.raw  rgb.raw  schukat-logo.raw
examples/sld_demo_s3_lvgl/: CMakeLists.txt  config.json  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/sld_demo_s3_lvgl/main/: idf_component.yml  resources.bat
examples/sld_demo_s3_lvgl/main/app/: app_main.c  app_ui_lvgl.c
examples/sld_demo_s3_lvgl/main/resources/: file_resources.c  file_resources.h  index.html
examples/sld_demo_s3_slint/: CMakeLists.txt  config_compressed.json  sdkconfig.defaults.esp32s3
examples/sld_demo_s3_slint/docs/: ide-setup-de.md
examples/sld_demo_s3_slint/main/: CMakeLists.txt
examples/sld_demo_s3_slint/main/app/: app_ui_slint.cpp  app_webserver.c  app_webserver.h
examples/sld_demo_s3_slint/main/board/: board.h  board_s3.c  board_test_s3_p4.c
examples/sld_demo_s3_slint/main/resources/: file_resources.c
examples/sld_demo_s3_slint/main/ui/: appwindow.slint  page_camera.slint
source/: module_include_public.h  module_public.h  module_public_kconfig.h
source/mcu/: mcu.c  mcu.h  mcu_config.h  mcu_types.h  sys.c  sys.h
source/mcu/common/: mcu_internal.h
source/mcu/espressif/esp32/: mcu_ad.c  mcu_can.c  (+12 more)
source/mcu/pc/: debug.c  debug.h  mcu_controller.c  mcu_controller.h  mcu_heap.h  mcu_internal.h  mcu_io_interrupt.c  mcu_rtc.c  mcu_timer.c  mcu_uart.c  mcu_uart_tools.c  mcu_uart_tools.h  windows.c  windows.h
source/mcu/peripheral/: mcu_ad.h  mcu_can.h  mcu_da.h  mcu_flash.h  mcu_i2c.h  mcu_io.h  mcu_io_interrupt.h  mcu_pwm.h  mcu_rtc.h  mcu_spi.h  mcu_timer.h  mcu_uart.h  mcu_watchdog.h
source/mcu/pt/: lc-addrlabels.h  lc-switch.h  lc.h  pt-sem.h  pt.h
source/module/comm/: README.md  comm.c  comm.h  comm_type.h  dbg.c  dbg.h  line_reader.c  line_reader.h
source/module/console/: README.md  console.c  console.h
source/module/convert/: README.md  base64.c  base64.h  bcd.c  bcd.h  convert.h  math.c  math.h  sort.c  sort.h  string.c  string.h  swap.c  swap.h
source/module/crc/: README.md  crc.c  crc.h  crc32.c  crc32.h  crc8.c  crc8.h
source/module/display/: README.md  display_common.c  display_common.h
source/module/eeprom/: README.MD  eeprom.c  eeprom.h  eeprom_i2c.c  eeprom_i2c.h  eeprom_internal.h  eeprom_spi.c  eeprom_spi.h
source/module/enum/: README.md  function_return.h  hid.h
source/module/fifo/: README.md  fifo.c  fifo.h  ringbuffer.c  ringbuffer.h
source/module/flash_info/: flash_info.c  flash_info.h  flash_info_esp.c  flash_info_pc.c
source/module/gui/: README.md
source/module/lcd_touch/: lcd_touch.c  lcd_touch.h  lcd_touch_calibration.c  lcd_touch_calibration.h  lcd_touch_esp32.c  lcd_touch_esp32.h
source/module/led/: README.md  led.c  led.h
source/module/list/: README.md  list.c  list.h
source/module/rtc/: rtc.c  rtc.h  rtc_alarm.c  rtc_alarm.h
source/module/sensor/: README.md  sensor_common.h
source/module/util/: README.md  assert.h  bit_array.c  bit_array.h  buffer.h  color.c  color.h  mem_pool.c  mem_pool.h  network_util.c  network_util.h  pair.h  pmod.c  pmod.h
source/module/version/: README.md  version.c  version.h
template/: CMakeLists.txt  gui_config.h  mcu_selection.h  module_config.h  module_enable.h  sys_config.h
template_mcu/: README.md  mcu_ad.c  mcu_can.c  mcu_controller.c  mcu_controller.h  mcu_flash.c  mcu_heap.h  mcu_i2c.c  mcu_internal.h  mcu_io_interrupt.c  mcu_pwm.c  mcu_rtc.c  mcu_spi.c  mcu_timer.c  mcu_uart.c
test/: CMakeLists.txt  convert_string.cpp  fifo_fifo.cpp  list_list.cpp  main.cpp  util_mempool.cpp
test/config/: mcu_selection.h  module_config.h  module_enable.h  sys_config.h
(+130 files in other folders)
